--- a/DockerFile
+++ b/DockerFile
@@ -17,6 +17,10 @@ WORKDIR /app
 # Copia el archivo compilado desde la fase de build
 COPY --from=build /app/Main.class .
 
+RUN chown -R appuser:appgroup /app
+
+USER appuser
+
 # Exponer el puerto
 EXPOSE 3000
 
