--- a/security/security.yaml
+++ b/security/security.yaml
@@ -33,3 +33,16 @@ roleRef:
   kind: Role
   name: dashboard-sofia # El rol que creamos
   apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: sofia-global-readonly-binding
+subjects:
+- kind: ServiceAccount
+  name: adonis-serviceaccount # La cuenta de servicio que creamos
+  namespace: sofiamnm
+roleRef:
+  kind: ClusterRole
+  name: global-reader # El rol que creamos
+  apiGroup: rbac.authorization.k8s.io
