--- a/oc.yaml
+++ b/oc.yaml
@@ -15,10 +15,20 @@ spec:
     metadata:
       labels:
         app: mi-app
-    spec:
+      annotations:
+        image.openshift.io/triggers:  |
+          [
+            {
+              "from": {
+                "kind": "ImageStreamTag",
+                "name": "ejercicio-codigo-s2i:latest"
+              },
+              "fieldPath": "spec.template.spec.containers[?(@.name==\"contenedor-principal\")].image"
+            }
+          ]    spec:
       containers:
         - name: contenedor-principal
-          image: sofiamosquera/smcursoopenshift:2  # <-- Reemplaza con la imagen que quieras usar
+          image: image-registry.openshift-image-registry.svc:5000/adonis-paz-dev/ejercicio-codigo-s2i:latest  # <-- Reemplaza con la imagen que quieras usar
           ports:
             - containerPort: 3000
           resources:
