--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,12 +15,20 @@ jobs:
       # 1. Clona tu repositorio en la máquina virtual
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          username: ${{ secrets.DOCKER_USERNAME  }}
+          password: ${{ secrets.DOCKER_TOKEN  }}
+      - name: Extract metadata for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ secrets.DOCKER_USERNAME  }}/smcursoopenshift
 
-      # 2. Construye la imagen de Docker
-      #    Utiliza el Dockerfile que se encuentra en la raíz de tu proyecto.
-      #    Esto no subirá la imagen a ningún registro (registry).
+
       - name: Build Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: false
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
