--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,13 +16,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          username: ${{ secrets.DOCKER_USERNAME  }}
-          password: ${{ secrets.DOCKER_TOKEN  }}
+          username: ${{ secrets.DOKER_USERNAME  }}
+          password: ${{ secrets.DOKER_TOKEN  }}
       - name: Extract metadata for Docker
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ secrets.DOCKER_USERNAME  }}/smcursoopenshift
+          images: ${{ secrets.DOKER_USERNAME  }}/smcursoopenshift
 
 
       - name: Build Docker image
