--- a/oc.yaml
+++ b/oc.yaml
@@ -95,3 +95,16 @@ spec:
       target:
         type: Utilization
         averageUtilization: 100
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mi-pvc
+  namespace: sofia-mosquera-dev
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+  storageClassName: gp3 # Clase de storange del openshift
