--- a/oc.yaml
+++ b/oc.yaml
@@ -19,6 +19,7 @@ spec:
       containers:
         - name: contenedor-principal
           image: sofia-mosquera-dev/smcursoopenshift:build-{{ tag }}  # <-- Reemplaza con la imagen que quieras usar
+          imagePullPolicy: Always
           ports:
             - containerPort: 3000
           resources:
