--- a/oc.yaml
+++ b/oc.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: contenedor-principal
-          image: sofia-mosquera-dev/smcursoopenshift:build-{{ tag }}  # <-- Reemplaza con la imagen que quieras usar
+          image: docker.io/sofia-mosquera-dev/smcursoopenshift:build-{{ tag }}  # <-- Reemplaza con la imagen que quieras usar
           imagePullPolicy: Always
           ports:
             - containerPort: 3000
