--- a/oc.yaml
+++ b/oc.yaml
@@ -102,7 +102,7 @@ metadata:
   namespace: sofia-mosquera-dev
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 1Gi
