--- a/oc.yaml
+++ b/oc.yaml
@@ -7,7 +7,7 @@ metadata:
     app: mi-app
     areanegocio: tecnologia
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: mi-app
@@ -85,7 +85,7 @@ spec:
     apiVersion: apps/v1
     kind: deployment
     name: mi-deployment
-  minReplicas: 2
+  minReplicas: 1
   maxReplicas: 5
   metrics:
   - type: Resource
@@ -102,7 +102,7 @@ metadata:
   namespace: sofia-mosquera-dev
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
