feat: deplegar microservicos usando helm

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,12 @@ jobs:
           curl -L https://mirror.openshift.com/pub/openshift-v4/clients/ocp/latest/openshift-client-linux.tar.gz | tar xz
           sudo mv oc /usr/local/bin/
           oc version
+    
+      - name: Install Helm
+        uses: azure/setup-helm@v3
+        with:
+          version: v3.12.0
+          
       - name: Log in Openshift
         uses: redhat-actions/oc-login@v1
         with:
@@ -63,10 +69,9 @@ jobs:
         run: |
           echo "Reemplazando {{ tag }} con ${{ github.run_number }}"
           sed -i "s|{{ tag }}|${{ github.run_number }}|g" oc.yaml
-          cat oc.yaml
+          cat values.yaml
 
       - name: Deploy files
         run: |
-          oc project sofia-mosquera-dev
-          oc apply -f oc.yaml
-          oc rollout status deployment/mi-deployment
+          helm show chart oci://registry-1.docker.io/sofiamosquera/mi-chart --version 3
+          helm upgrade --install microservicio-1 oci://registry-1.docker.io/sofiamosquera/mi-chart --version 4 --values values.yaml
